test/yaml/testdata/input/backend-protocol/grpc-with-httproute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-path-ingress
  namespace: namespace1
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /grpc.service.v1.UserService
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-path-ingress
  namespace: namespace1
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /path-ingress1
        pathType: Prefix
        backend:
          service:
            name: service-ingress1
            port:
              number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: namespace1
spec:
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: user-service
---
apiVersion: v1
kind: Service
metadata:
  name: service-ingress1
  namespace: namespace1
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
